feat: Alterações - TP I

--- a/monografias/templates/monografias/create-monography.html
+++ b/monografias/templates/monografias/create-monography.html
@@ -39,7 +39,7 @@
       </select>
 
       <label for="date">Data:</label>
-      <input class="input-text" type="text" name="date" id="date" required />
+      <input class="input-text" type="date" name="date" id="date" required />
       <label for="summary">Resume:</label>
       <input
         class="input-text"
